@@ -3,9 +3,11 @@
 \alias{summarize}
 \alias{summarize.glm}
 \alias{summarize.glmlist}
+\alias{summarize.loglm}
+\alias{summarize.loglmlist}
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{
-Brief Summary of Model Fit for glm Models
+Brief Summary of Model Fit for glm and loglm Models
 }
 \description{
 For \code{glm} objects, the \code{print} and \code{summary} methods give
@@ -13,33 +15,34 @@ too much information if all one wants to see is a brief summary of model
 goodness of fit, and there is no easy way to display a compact comparison of
 model goodness of fit for a collection of models fit to the same data.
 
-\code{summarize} provides a brief summary for one or more \code{glm} models.
+All \code{loglm} models have equivalent glm forms, but the 
+\code{print} and \code{summary} methods give quite different results
+
+\code{summarize} provides a brief summary for one or more \code{glm} or \code{loglm} models
 This implementation is experimental, and is subject to change.
 }
 \usage{
 
 summarize(object, ...)
 
-\method{summarize}{glm}(object, ..., dispersion = NULL, test = NULL)
+\method{summarize}{glm}(object, ..., test = NULL)
+\method{summarize}{glmlist}(object, ..., test = NULL)
 
-\method{summarize}{glmlist}(object, ..., dispersion = NULL, test = NULL)
+\method{summarize}{loglm}(object, ...)
+\method{summarize}{loglmlist}(object, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
 
   \item{object, \dots}{objects of class \code{glm}, 
   	typically the result of a call to \code{glm}, or a list of objects for the "glmlist" method.
+  	Alternatively, objects of class \code{loglm} or a "loglmlist" object
 }
 %  \item{\dots}{
 %%%     ~~Describe \code{\dots} here~~
 %}
 
-  \item{dispersion}{
-the dispersion parameter for the fitting family. 
-Not used in the current implementation.  
-}
   \item{test}{
-a character string, (partially) matching one of "Chisq", "F" or "Cp".
 Not used in the current implementation.
 }
 
@@ -68,7 +71,7 @@ Michael Friendly
 %% ~Make other sections like Warning with \section{Warning }{....} ~
 
 \seealso{
-\code{\link{glmlist}}
+\code{\link{glmlist}}, \code{\link{loglmlist}}, \code{\link{modFit}}
 }
 \examples{
 data(Mental)
