@@ -10,7 +10,8 @@ o Updated demo(Wong2-3): added model comparison plots, glmlist processing
 o Added Suggest: VGAM
 o Extended package description in vcdExtra-package.Rd
 o Added glmlist() to facilitate processing, extraction, plotting, etc. of a collection of glm() models
-o Added summarize methods for glm and glmlist objects
+o Added loglmlist(), for collections of loglm() objects
+o Added summarize methods for glm, glmlist, loglm and loglmlist objects
 
 Version 0.4-1 (2010-02-21)
 
